--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     border: 0;
 }
 body{
-    background-color: whitesmoke;
+    background-color: rgb(241, 238, 238);
 }
 /*                              Header                            */
 header{
@@ -26,8 +26,8 @@ header #logo{
 header .search{
     display: flex;
     height: 40px;
-    width: 45%;
-    margin-left: 20%;
+    width: 50%;
+    margin-left: 35%;
 }
 header .search input{
     height: 100%;
@@ -45,6 +45,13 @@ main{
     height: 40px;
     width: 200px;
     color: white;
+}
+.inputf{
+    border: solid 2px rgb(231, 231, 231);
+    height: 40px;
+    width: 100%;
+    background-color: white;
+    padding-left: 10px;
 }
 /*                  #home                  */
 #home{
@@ -142,17 +149,6 @@ main{
     width: 100%;
     justify-content: space-between;
 }
-#offers .bloco-de-imagens .legenda{
-    position: absolute;
-    bottom: 0;
-    left: 1%;
-    right: auto;
-    color: #fff;
-    text-align: center;
-    font-size: 1.2em;
-    padding: 10px;
-    
-}
 #offers .bloco-de-imagens .imagemg{
     display: flex;
     width: 100%;
@@ -166,7 +162,7 @@ main{
     position: relative;
     justify-content: space-between;
     align-content: space-between;
-    
+    background-color: white;
 }
 #offers .bloco-de-imagens .imagemp{
     display: flex;
@@ -194,17 +190,62 @@ main{
     width: 100%;
     height: 100%;
 }
-
+#offers .bloco-de-imagens .legenda{
+    position: absolute;
+    bottom: 0;
+    left: 1%;
+    right: auto;
+    color: #fff;
+    text-align: center;
+    font-size: 1.2em;
+    padding: 10px;
+}
+#offers .bloco-de-imagens2 .legenda{
+    display: flex;
+    flex-flow: column wrap;
+    row-gap: 1em;
+    padding: 20px;
+}
+#offers .bloco-de-imagens2 .price{
+    font-size: medium;
+    color: rgb(126, 126, 126)
+}
+#offers .bloco-de-imagens2 .legenda .button{
+    background-color: white;
+    color: black;
+    width: 100px;
+}
 
 /*                  #getemail                  */
 #getemail{
     display: flex;
     flex-flow: column wrap;
     width: 80%;
+    row-gap: 1em;
+    margin-top: 4em;
+    background-color: grey;
+    padding-top: 2em;
+    padding-bottom: 1em;
+    color: rgb(219, 219, 219);
+}
+#getemail h2{
+    width: 95%;
+    margin: auto;
+    color: rgb(219, 219, 219);
 }
 #getemail div{
     display: flex;
     flex-flow: column wrap;
+    width: 95%;
+    margin: auto;
+    row-gap: 1em;
+}
+#getemail div p{
+    color: rgb(219, 219, 219);
+}
+#getemail div input{}
+#getemail div button{
+    background-color: rgb(255, 106, 106);
 }
 
 
@@ -215,10 +256,16 @@ footer{
     justify-content: center;
     width: 100%;
     flex-direction: column;
+    margin-top: 4em;
 }
 footer #contact{
     display: flex;
     flex-flow: column wrap;
     width: 80%;
-
+    row-gap: 1em;
+}
+footer #contact form{
+    display: flex;
+    flex-flow: column wrap;
+    row-gap: 1em;
 }
